fixing img header

--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
                         <a href="">Tentang Saya</a>
                     </div>
                 </div>
-                <div class="col-lg-6 img-header">
-                    <img src="img/img-1.png">
+                <div style="display: flex; justify-content: flex-end;" class="col-lg-6">
+                    <div class="img-header">
+                        <img src="img/img-1.png">
+                    </div>
                 </div>
             </div>
         </div>
