Menambahkan konten web portofolio

--- a/article.html
+++ b/article.html
@@ -82,7 +82,7 @@
             type="text"
             class="form-control"
             id="inlineFormInputGroupUsername"
-            placeholder="Username"
+            placeholder="Cari artikel..."
           />
           <div class="input-group-append">
             <button class="btn button-primary">
@@ -153,10 +153,10 @@
         </p>
 
         <div class="button-group d-flex">
-          <a href="#" class="btn button-primary btn-sm mx-2 px-2">
+          <a href="https://www.facebook.com/profile.php?id=100004376956632" class="btn button-primary btn-sm mx-2 px-2">
             <i class="fab fa-facebook"></i>
           </a>
-          <a href="#" class="btn button-primary btn-sm mx-2 px-2">
+          <a href="https://www.instagram.com/igdyogapermana/" class="btn button-primary btn-sm mx-2 px-2">
             <i class="fab fa-instagram"></i>
           </a>
           <a href="#" class="btn button-primary btn-sm mx-2 px-2">
