Menambahkan konten pada web portofolio

--- a/portofolio.html
+++ b/portofolio.html
@@ -9,6 +9,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./vendor/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./vendor/fontawesome-free/css/all.min.css" />
+    <link rel="stylesheet" href="./vendor/aos/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Yoga Permana</title>
   </head>
@@ -88,7 +89,7 @@
           </div>
         </div>
 
-       <div class="row mt-5">
+        <div class="row mt-5">
           <div class="col-lg-4 col-md-6 col-12 mb-5">
             <div class="card article-card">
                 <div class="card-body">
@@ -100,7 +101,7 @@
                     </a>
                     <a href="#"><span class="text-general author">Yoga Permana</span></a>
                     <div class="d-flex list-category">
-                        <a href="#"><span class="text-general category">HTML</span></a>
+                        <a href="#"><span class="text-general category">Portofolio</span></a>
                     </div>
                 </div>
             </div>
@@ -116,7 +117,7 @@
                     </a>
                     <a href="#"><span class="text-general author">Yoga Permana</span></a>
                     <div class="d-flex list-category">
-                        <a href="#"><span class="text-general category">HTML</span></a>
+                        <a href="#"><span class="text-general category">Portofolio</span></a>
                     </div>
                 </div>
             </div>
@@ -168,5 +169,9 @@
     </footer>
     <script src="./vendor/jquery/jquery.min.js"></script>
     <script src="./vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./vendor/aos/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
