--- a/article.html
+++ b/article.html
@@ -43,9 +43,9 @@
               <li class="nav-item active">
                 <a class="nav-link" href="article.html">Artikel</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="#">Tentang</a>
-              </li>
+              </li> -->
             </ul>
             <a href="#" class="btn button-primary btn-sm ml-lg-4"
               >Hubungi Saya</a
