Menambahkan desain figma dan readme.md

--- a/article.html
+++ b/article.html
@@ -61,10 +61,7 @@
           <div class="col-md-6">
             <h2 class="title">Artikel</h2>
             <p class="text-general">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor
-              assumenda eius vitae rerum, ullam voluptatem officiis sapiente
-              eum! Inventore consequuntur, voluptatibus nesciunt odit maiores
-              quam cumque similique vitae placeat minima.
+              Kumpulan artikel yang bermanfaat untuk upgrade skill kalian.
             </p>
           </div>
           <div class="col-md-6">
